<resources>
    <string name="button_ok">OK</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_next">Next</string>
    <string name="button_back">Back</string>
    <string name="button_done_and_exit">Upload done. Exit</string>
    <string name="button_run_in_background">Run in background</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_switch_to_grid_layout">Show as grid</string>
    <string name="button_switch_to_list_layout">Show as list</string>
    <string name="button_open_sort_by">Sort by…</string>
    <string name="button_open_filter_by">Filter by…</string>
    <string name="button_open_connection_center">Manage connection</string>
    <string name="button_clear_list">Clear list</string>
    <string name="button_resync_all">Re-sync</string>
    <string name="button_skip">Skip</string>
    <string name="button_launch_sync">Launch Sync</string>
    <string name="button_empty_cache">Empty Cache</string>
    <string name="action_home">Home</string>
    <string name="action_open_after_migration">Start using the app!</string>
    <string name="action_choose_account">Choose an account</string>
    <string name="action_browse">Browse</string>
    <string name="action_open_workspaces">Workspaces</string>
    <string name="action_open_offline_roots">Offline Files</string>
    <string name="action_open_bookmarks">Bookmarks</string>
    <string name="action_open_transfers">Transfers</string>
    <string name="action_open_jobs">Background Jobs</string>
    <string name="action_open_logs">Logs</string>
    <string name="action_open_about">About</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_house_keeping">House keeping</string>
    <string name="action_re_log">Re-log to server</string>
    <string name="open_drawer">Open menu drawer</string>
    <string name="my_workspaces">My Workspaces</string>
    <string name="quick_access">Quick Access</string>
    <string name="my_account">My Account</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="generic_error_message">Unexpected error…</string>
    <string name="server_unreachable">Server is un-reachable</string>
    <string name="empty_cache">Cannot list folder content</string>
    <string name="cannot_download_file">Cannot download file</string>
    <string name="no_download_on_metered">Downloads on metered networks are restricted,\nyou can change this in the application settings</string>
    <string name="welcome_title">Welcome in Pydio!</string>
    <string name="welcome_subtitle">A light Cells client for Android</string>
    <string name="welcome_text">All your data on your device, everywhere, at any time!</string>
    <string name="welcome_no_account_instructions">First, configure your connection to your remote Pydio server:</string>
    <string name="welcome_add_account_button">Configure a connection</string>
    <string name="about_page_version_title">Pydio</string>
    <string name="about_version_title">Pydio Client for Android</string>
    <string name="about_help_title">Troubleshooting</string>
    <string name="about_page_copyright">Pydio is a trademark of Abstrium SAS.</string>
    <string name="version_name_display">Version name: %s</string>
    <string name="version_code_display">Version code: %s</string>
    <string name="last_update_time_display">Last update on: %s</string>
    <string name="about_page_get_help">If you cannot get this application to work correctly, please send an email with a complete description of the problem you are facing so that we can help you.</string>
    <string name="help_button_support">Contact Pydio Support</string>
    <string name="open_website_button">More info on pydio.com</string>
    <string name="no_internet">No internet connection</string>
    <string name="captive_portal">Captive portal: sign in required</string>
    <string name="metered_connection">On a metered connection</string>
    <string name="roaming_connection">Using a roaming connection</string>
    <string name="ask_url_title">Register a new account</string>
    <string name="ask_url_desc">Please, enter your server address</string>
    <string name="ask_url_example">e.g: https://files.example.com</string>
    <string name="oauth_callback_waiting">Authentication process has been launched</string>
    <string name="oauth_callback_cancel">Cancel</string>
    <string name="invalid_tls_certificate">Invalid certificate</string>
    <string name="confirm_skip_verify_title">Invalid certificate</string>
    <string name="confirm_skip_verify_desc">Someone could be trying to impersonate the site and you should not continue.\n\n Websites prove their identity via certificates. Your device does not trust %1$s because its certificate issuer is unknown, the certificate is self-signed, or the server is not sending the correct intermediate certificates.\n\n</string>
    <string name="confirm_skip_verify_accept">Accept the risk and continue</string>
    <string name="confirm_skip_verify_cancel">Go back (recommended)</string>
    <string name="button_i_understand_the_risks">OK, I understand the risks</string>
    <string name="p8_credentials_title">Pydio 8</string>
    <string name="p8_credentials_desc">Please enter your credentials</string>
    <string name="oauth_code_flow_title">Processing</string>
    <string name="oauth_code_flow_desc">Please be patient.</string>
    <string name="no_connection_title">Connection Down</string>
    <string name="no_connection_status">Cannot connect to %1$s as %2$s: %3$s</string>
    <string name="launch_auth">Re-authenticate</string>
    <string name="auth_ok">Account is connected</string>
    <string name="auth_err_expired">Credentials are expired</string>
    <string name="auth_err_no_token">No or invalid credentials</string>
    <string name="account_list_title">My Accounts</string>
    <string name="account_list_desc">Manage already registered remote servers</string>
    <string name="account_list_none">No account has been configured yet…</string>
    <string name="account_details_title" translatable="false">Account detail title</string>
    <string name="account_details_desc" translatable="false">Account details description</string>
    <string name="account_confirm_deletion_desc">Are you sure you want to forget this account %s?</string>
    <string name="no_account">No account, please configure at least a connection</string>
    <string name="loading_message">Please wait while loading content…</string>
    <string name="ws_list_subtitle">Choose a workspace to browse</string>
    <string name="browse_list_desc">Browse your remote servers</string>
    <string name="browse_list_none">Empty</string>
    <string name="recycle_bin_label">Recycle Bin</string>
    <string name="account_server_label">Server: %s</string>
    <string name="account_logged_in_as_label">Logged in as %s</string>
    <string name="category_cells">Cells</string>
    <string name="category_workspaces">Workspaces</string>
    <string name="last_check">Last check</string>
    <string name="last_check_never">never</string>
    <string name="appears_in_prefix">Inside %s</string>
    <string name="no_preview_for">Cannot preview %s</string>
    <string name="unavailable_preview">Unavailable preview</string>
    <string name="search_label">Search…</string>
    <string name="search_hint">Enter a term to search your files!</string>
    <string name="no_result_for_search">No result found for \"%s\"</string>
    <string name="cannot_search_remote">Cannot perform search</string>
    <string name="search_is_local_only">You can only search among already cached nodes</string>
    <string name="sync_in_progress">Synchronising…</string>
    <string name="sync_downloading">Downloading files…</string>
    <string name="sync_tree_walking">Walking the tree to look for changes</string>
    <string name="sync_already_running">A synchronisation process is already running, please wait before launching a new one</string>
    <string name="confirm_remove_offline_title">Confirm your choice</string>
    <string name="confirm_remove_offline_desc">Removing the offline status of this node can lead to losing the downloaded data. Are you sure you want to proceed</string>
    <string name="account_home_no_ws_title">No workspace to list</string>
    <string name="account_home_no_ws_desc">Either the server is unreachable, or you may have lost your permissions. In the latter case, please contact your site administrator.</string>
    <string name="empty_folder">This folder is empty</string>
    <string name="empty_content_message">No content here yet</string>
    <string name="no_bookmark_for_account">No bookmark has been defined for this account…</string>
    <string name="no_transfer_for_account">There is no recent transfer to show</string>
    <string name="no_transfer_with_filter">No transfer with \"%s\" status</string>
    <string name="no_offline_root_for_account">No folder has been tagged to be kept offline for this account…</string>
    <plurals name="selected_count">
        <item quantity="one">%d item selected</item>
        <item quantity="other">%d items selected</item>
    </plurals>
    <string name="in_progress_updating">Updating…</string>
    <string name="in_progress_deleting">Deleting…</string>
    <string name="in_progress_renaming">Renaming…</string>
    <string name="in_progress_moving">Moving…</string>
    <string name="pref_category_title_recycler">Customise lists (when applicable)</string>
    <string name="pref_choose_list_layout">Type of layout</string>
    <string name="pref_category_title_metered">Limitations on metered network</string>
    <string name="pref_apply_metered_limits_title">Apply limitations</string>
    <string name="pref_apply_metered_limits_desc">Warning: turning this off will skip all limitations when on a metered network. This might lead to raising costs</string>
    <string name="pref_metered_dl_thumbs_title">Download thumbs</string>
    <string name="pref_metered_dl_thumbs_desc">Also retrieve thumbnails when on metered network</string>
    <string name="pref_on_metered_ask_before_dl_files_title">Ask before download</string>
    <string name="on_metered_ask_before_dl_files_greater_than_title">When file is greater than (in MB)</string>
    <string name="on_metered_ask_before_dl_files_greater_than_desc">Ask before download when target file is greater than (in MB)</string>
    <string name="pref_category_title_offline">Offline synchronisation</string>
    <string name="pref_choose_list_offline_frequency_title">Sync frequency</string>
    <string name="pref_choose_list_offline_frequency_desc">Choose a frequency for background synchronisation</string>
    <string name="pref_offline_constraint_wifi_title">Run sync when network is</string>
    <string name="pref_offline_constraint_wifi_desc">Choose a type of network that constrains when we can launch the synchronisation</string>
    <string name="pref_offline_constraint_charging_title">When charging</string>
    <string name="pref_offline_constraint_charging_desc">Only launch sync when the device is charging</string>
    <string name="pref_offline_constraint_idle_title">When Idle</string>
    <string name="pref_offline_constraint_idle_desc">When the device is idle</string>
    <string name="pref_offline_constraint_batt_not_low_title">When battery not low</string>
    <string name="pref_offline_constraint_batt_not_low_desc">When the battery is not low</string>
    <string name="pref_category_title_troubleshooting">Troubleshooting</string>
    <string name="pref_troubleshooting_show_list_title">Show advanced tools</string>
    <string name="pref_troubleshooting_show_list_desc">Gives access to more insider info to help troubleshooting unexpected behaviours</string>
    <string name="order_by_title">Sort order</string>
</resources>