<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/offline_root_list_destination"
        android:icon="@drawable/ic_outline_download_done_24"
        android:title="@string/action_open_offline_roots" />

    <item
        android:id="@+id/bookmark_list_destination"
        android:icon="@drawable/ic_baseline_star_24"
        android:title="@string/action_open_bookmarks" />

    <item
        android:id="@+id/transfer_list_destination"
        android:icon="@drawable/ic_baseline_import_export_24"
        android:title="@string/action_open_transfers" />

    <item
        android:id="@+id/ws_section"
        android:title="@string/my_workspaces"
        android:visible="true">
        <menu android:id="@+id/my_workspaces" />
    </item>

    <item
        android:id="@+id/advanced"
        android:title="@string/my_account"
        android:visible="true">
        <menu android:id="@+id/advanced_menu">
            <item
                android:id="@+id/settings_destination"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/clear_cache"
                android:icon="@drawable/ic_baseline_folder_delete_24"
                android:title="@string/action_clear_cache" />
            <item
                android:id="@+id/about_destination"
                android:icon="@drawable/ic_baseline_info_24"
                android:title="@string/action_open_about" />
        </menu>
    </item>

</menu>