<?xml version= "1.0" encoding= "utf-8" ?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_edit_view"
        android:icon="@drawable/ic_sharp_search_24"
        android:title="@string/search_hint"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/open_connexion_dialog"
        android:icon="@drawable/ic_round_warning_24"
        android:title="@string/button_open_connection_center"
        app:showAsAction="always" />

    <item
        android:id="@+id/clear_table"
        android:icon="@drawable/ic_outline_delete_sweep_24"
        android:title="@string/button_clear_list"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/switch_recycler_layout"
        android:icon="@drawable/ic_sharp_grid_view_24"
        android:title="@string/button_switch_to_grid_layout" />

    <item
        android:id="@+id/open_sort_by"
        android:icon="@drawable/ic_baseline_sort_24"
        android:title="@string/button_open_sort_by" />

    <item
        android:id="@+id/open_filter_by"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title="@string/button_open_filter_by"
        android:visible="false" />

    <!--    <item-->
    <!--        android:id="@+id/open_account_list"-->
    <!--        android:icon="@drawable/ic_baseline_switch_account_24"-->
    <!--        android:title="@string/switch_account" />-->

    <!--    <item-->
    <!--        android:id="@+id/display_type_holder"-->
    <!--        android:title="Display"-->
    <!--        app:showAsAction="never">-->
    <!--        <menu android:id="@+id/display_type">-->
    <!--            <item-->
    <!--                android:id="@+id/display_as_list"-->
    <!--                android:icon="@android:drawable/stat_sys_download_done"-->
    <!--                android:title="List" />-->
    <!--            <item-->
    <!--                android:id="@+id/display_as_thumb"-->
    <!--                android:icon="@android:drawable/star_on"-->
    <!--                android:title="Thumb" />-->
    <!--            <item-->
    <!--                android:id="@+id/display_as_galery"-->
    <!--                android:icon="@android:drawable/star_on"-->
    <!--                android:title="Galery" />-->
    <!--        </menu>-->
    <!--    </item>-->

</menu>