<?xml version="1.0" encoding="utf-8"?>

<layout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/about_version_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.6"
            android:text="@string/about_version_title"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.Material3.TitleSmall" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/version_card"
            style="?attr/materialCardViewFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/grid_layout_card_margin"
            android:padding="@dimen/margin"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardMaxElevation="@dimen/grid_ws_card_max_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_medium"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/about_version_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/version_name_display"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

                <TextView
                    android:id="@+id/about_version_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/version_code_display"
                    android:textAppearance="?attr/textAppearanceBodyLarge" />

                <TextView
                    android:id="@+id/about_version_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/version_date_display"
                    android:textAppearance="?attr/textAppearanceBodyLarge" />

                <TextView
                    android:id="@+id/about_trademark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_page_copyright"
                    android:textAppearance="?attr/textAppearanceBodyLarge"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/about_version_name"
                    app:layout_constraintTop_toBottomOf="@+id/about_copyright_date" />

                <TextView
                    android:id="@+id/about_copyright_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/copyright_string"
                    android:textAppearance="?attr/textAppearanceBodyLarge" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/main_website_button"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/open_website_button" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/about_help_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:alpha="0.6"
            android:text="@string/about_help_title"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.Material3.TitleSmall" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/support_card"
            style="?attr/materialCardViewFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/grid_layout_card_margin"
            android:padding="@dimen/margin"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/grid_ws_card_elevation"
            app:cardMaxElevation="@dimen/grid_ws_card_max_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/get_support_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_page_get_help"
                    android:textAppearance="?attr/textAppearanceBodyLarge" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/send_support_mail_button"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/help_button_support" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</layout>
